<resources>
    <string name="app_name">PopLibs</string>
    <string name="this_is_button">This is button</string>
    <string name="button">Button</string>
    <string name="this_is_button_2">This is button 2</string>
    <string name="this_is_button_1">This is button 1</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="text">TEXT</string>
    <string name="forks">Number of forks:\n</string>
    <string name="number_of_forks">Number of forks:</string>
</resources>